--- a/templates/view_signup.html
+++ b/templates/view_signup.html
@@ -4,8 +4,8 @@
 
     <form id="frm_user_signup" class="w-25% d-flex flex-col gap-4 mx-auto">
 
-        <!-- <div class="">
-            <label for="user_role" class="">
+        <div>
+            <label for="user_role">
                 Role
             </label>
             <select name="user_role" id="user_role" mix-check="{{ x.USER_ROLES }}"
@@ -15,7 +15,7 @@
                 <option value="partner">Partner</option>
                 <option value="restaurant">Restaurant</option>
             </select>
-        </div> -->
+        </div>
 
         <div class="d-flex flex-col">
             <label for="user_name">
