--- a/templates/view_signup.html
+++ b/templates/view_signup.html
@@ -21,7 +21,7 @@
             <label for="user_name">
                 <span>name</span>
             </label>
-            <input name="user_name" type="text" mix-check="{{ x.USER_NAME_REGEX }}">
+            <input name="user_name" type="text" mix-check="{{ x.NAME_REGEX }}">
         </div>
 
 
