--- a/templates/view_login.html
+++ b/templates/view_login.html
@@ -1,15 +1,14 @@
-
 {% include "_top.html" %}
 
 <main class="w-full h-100vh d-flex p-items-center">
 
-    
+
     <form id="frm_user_login" class="w-25% d-flex flex-col gap-4 mx-auto">
-        
+
         <div class="text-c-green text-200">
             {{ message }}
         </div>
-        
+
         <div class="d-flex flex-col">
             <label for="user_email">
                 <span>email</span>
@@ -20,7 +19,8 @@
         <div class="d-flex flex-col">
             <label for="user_password" class="d-flex">
                 <span>password</span>
-                <span class="ml-auto text-c-gray:+25">{{ x.USER_PASSWORD_MIN }} to {{ x.USER_PASSWORD_MAX }} chars</span>
+                <span class="ml-auto text-c-gray:+25">{{ x.USER_PASSWORD_MIN }} to {{ x.USER_PASSWORD_MAX }}
+                    chars</span>
             </label>
             <input name="user_password" type="text" mix-check="{{ x.REGEX_USER_PASSWORD }}">
         </div>
@@ -30,6 +30,8 @@
         </button>
 
         <a href="{{url_for('view_signup')}}" class="text-a-center">Signup</a>
+
+        <a href="{{url_for('view_signup_restaurant')}}" class="text-a-center">Are you a restaurant?</a>
 
     </form>
 
