--- a/templates/view_login.html
+++ b/templates/view_login.html
@@ -13,7 +13,7 @@
             <label for="user_email">
                 <span>email</span>
             </label>
-            <input name="user_email" type="text" mix-check="{{ x.REGEX_EMAIL }}">
+            <input name="user_email" type="text" mix-check="{{ x.EMAIL_REGEX }}">
         </div>
 
         <div class="d-flex flex-col">
@@ -22,7 +22,7 @@
                 <span class="ml-auto text-c-gray:+25">{{ x.USER_PASSWORD_MIN }} to {{ x.USER_PASSWORD_MAX }}
                     chars</span>
             </label>
-            <input name="user_password" type="text" mix-check="{{ x.REGEX_USER_PASSWORD }}">
+            <input name="user_password" type="text" mix-check="{{ x.PASSWORD_REGEX }}">
         </div>
 
         <button mix-post="/login" mix-data="#frm_user_login">
