fixed_all_routes_after_login

--- a/templates/view_customer.html
+++ b/templates/view_customer.html
@@ -9,10 +9,11 @@
         >
             More
         </button> -->
+        <h1>Customer</h1>
         {{ user }}
 
     </div>
 </main>
 
 
-{% include "_bottom.html" %}
+{% include "_bottom_map.html" %}
