--- a/templates/view_signup.html
+++ b/templates/view_signup.html
@@ -52,7 +52,7 @@
             Signup
         </button>
 
-        <a href="{{url_for('view_login')}}" class="text-a-center">Login</a>
+        <a href="{{url_for('view_signup_restaurant')}}" class="text-a-center">Want to register your restaurant?</a>
 
     </form>
 
