--- a/templates/view_login.html
+++ b/templates/view_login.html
@@ -29,6 +29,7 @@
             Login
         </button>
 
+        <a href="{{url_for('view_forgot_password')}}" class="text-a-center">Forgot password?</a>
         <a href="{{url_for('view_signup')}}" class="text-a-center">Signup</a>
 
 
