--- a/templates/view_reset_password.html
+++ b/templates/view_reset_password.html
@@ -2,34 +2,21 @@
 
 <main class="w-full h-100vh d-flex p-items-center">
     <form id="frm_reset_password" class="w-25% d-flex flex-col gap-4 mx-auto">
-        <input
-            type="hidden"
-            name="reset_password_key"
-            value="{{ reset_password_key }}" />
+        <input type="hidden" name="reset_password_key" value="{{ reset_password_key }}" />
         <div class="d-flex flex-col">
             <label for="new_password" class="d-flex">
-                <span>new password</span>
+                <span>New password</span>
             </label>
-            <input
-                id="new_password"
-                name="new_password"
-                type="text"
-                mix-check="{{ x.PASSWORD_REGEX }}" />
+            <input id="new_password" name="new_password" type="text" mix-check="{{ x.PASSWORD_REGEX }}" />
         </div>
         <div class="d-flex flex-col">
             <label for="confirm_password" class="d-flex">
-                <span>confirm password</span>
+                <span>Confirm password</span>
             </label>
-            <input
-                id="confirm_password"
-                name="confirm_password"
-                type="text"
-                mix-check="{{ x.PASSWORD_REGEX }}" />
+            <input id="confirm_password" name="confirm_password" type="text" mix-check="{{ x.PASSWORD_REGEX }}" />
         </div>
 
-        <button
-            mix-post="/reset-password/{{ reset_password_key }}"
-            mix-data="#frm_reset_password">
+        <button mix-post="/reset-password/{{ reset_password_key }}" mix-data="#frm_reset_password">
             Reset password
         </button>
     </form>
