--- a/templates/view_index.html
+++ b/templates/view_index.html
@@ -1,16 +1,20 @@
 {% include "_top.html" %}
 
 <main class="w-full d-flex">
-    <div id="items" class="w-full h-100vh">
+    <div id="items" class="w-full h-100vh text-a-center">
         <!-- <button class="px-20 py-4 rounded-sm"
             mix-get="/items/page/1"
         >
             More
         </button> -->
-        <button><a href="{{url_for('view_login')}}" class="text-a-center">Login</a></button>
         <h1>Welcome</h1>
+        <button>
+            <a href="{{url_for('view_login')}}" class="text-a-center">Login</a>
+        </button>
+        <button>
+            <a href="{{url_for('view_signup')}}" class="text-a-center">Sign up</a>
+        </button>
     </div>
 </main>
-
 
 {% include "_bottom.html" %}
