--- a/templates/view_login.html
+++ b/templates/view_login.html
@@ -1,40 +1,29 @@
 {% include "_top.html" %}
 
 <main class="w-full h-100vh d-flex p-items-center">
-
-
     <form id="frm_user_login" class="w-25% d-flex flex-col gap-4 mx-auto">
-
-        <div class="text-c-green text-200">
-            {{ message }}
-        </div>
+        <div class="text-c-green text-200">{{ message }}</div>
 
         <div class="d-flex flex-col">
             <label for="user_email">
-                <span>email</span>
+                <span>Email</span>
             </label>
-            <input name="user_email" type="text" mix-check="{{ x.EMAIL_REGEX }}">
+            <input name="user_email" type="text" mix-check="{{ x.EMAIL_REGEX }}" />
         </div>
 
         <div class="d-flex flex-col">
             <label for="user_password" class="d-flex">
-                <span>password</span>
-                <span class="ml-auto text-c-gray:+25">{{ x.USER_PASSWORD_MIN }} to {{ x.USER_PASSWORD_MAX }}
-                    chars</span>
+                <span>Password</span>
+                <span class="ml-auto text-c-gray:+25">{{ x.PASSWORD_MIN }} to {{ x.PASSWORD_MAX }} chars</span>
             </label>
-            <input name="user_password" type="text" mix-check="{{ x.PASSWORD_REGEX }}">
+            <input name="user_password" type="text" mix-check="{{ x.PASSWORD_REGEX }}" />
         </div>
 
-        <button mix-post="/login" mix-data="#frm_user_login">
-            Login
-        </button>
+        <button mix-post="/login" mix-data="#frm_user_login" class="cursor-pointer">Login</button>
 
         <a href="{{url_for('view_forgot_password')}}" class="text-a-center">Forgot password?</a>
         <a href="{{url_for('view_signup')}}" class="text-a-center">Signup</a>
-
-
     </form>
-
 </main>
 
 {% include "_bottom.html" %}
