--- a/templates/view_signup.html
+++ b/templates/view_signup.html
@@ -1,16 +1,15 @@
 {% include "_top.html" %}
 
 <main class="w-full h-100vh d-flex p-items-center">
-
     <form id="frm_user_signup" class="w-25% d-flex flex-col gap-4 mx-auto">
-
         <div>
-            <label for="user_role">
-                Role
-            </label>
-            <select name="user_role" id="user_role" mix-check="{{ x.USER_ROLES }}"
+            <label for="user_role"> Role </label>
+            <select
+                name="user_role"
+                id="user_role"
+                mix-check="{{ x.USER_ROLES }}"
                 class="h-12 border-1 border-c-gray:+30 w-full outline-none pl-2 rounded-sm">
-                <option disabled selected value> -- Select an option -- </option>
+                <option disabled selected value>-- Select an option --</option>
                 <option value="customer">Customer</option>
                 <option value="partner">Partner</option>
             </select>
@@ -18,44 +17,37 @@
 
         <div class="d-flex flex-col">
             <label for="user_name">
-                <span>name</span>
+                <span>First name</span>
             </label>
-            <input name="user_name" type="text" mix-check="{{ x.NAME_REGEX }}">
+            <input name="user_name" type="text" mix-check="{{ x.NAME_REGEX }}" />
         </div>
-
 
         <div class="d-flex flex-col">
             <label for="user_last_name">
                 <span>Last name</span>
             </label>
-            <input name="user_last_name" type="text" mix-check="{{ x.NAME_REGEX }}">
+            <input name="user_last_name" type="text" mix-check="{{ x.NAME_REGEX }}" />
         </div>
 
         <div class="d-flex flex-col">
             <label for="user_email">
-                <span>email</span>
+                <span>Email</span>
             </label>
-            <input name="user_email" type="text" mix-check="{{ x.EMAIL_REGEX }}">
+            <input name="user_email" type="text" mix-check="{{ x.EMAIL_REGEX }}" />
         </div>
-
 
         <div class="d-flex flex-col">
             <label for="user_password" class="d-flex">
-                <span>password</span>
-                <span class="ml-auto text-c-gray:+25">{{ x.USER_PASSWORD_MIN }} to {{ x.USER_PASSWORD_MAX }}
-                    chars</span>
+                <span>Password</span>
+                <span class="ml-auto text-c-gray:+25">{{ x.PASSWORD_MIN }} to {{ x.PASSWORD_MAX }} chars</span>
             </label>
-            <input name="user_password" type="text" mix-check="{{ x.PASSWORD_REGEX }}">
+            <input name="user_password" type="text" mix-check="{{ x.PASSWORD_REGEX }}" />
         </div>
 
-        <button mix-post="/users" mix-data="#frm_user_signup">
-            Signup
-        </button>
+        <button mix-post="/users" mix-data="#frm_user_signup">Signup</button>
 
         <a href="{{url_for('view_signup_restaurant')}}" class="text-a-center">Want to register your restaurant?</a>
-
     </form>
-
 </main>
 
 {% include "_bottom.html" %}
