--- a/templates/view_signup_restaurant.html
+++ b/templates/view_signup_restaurant.html
@@ -1,43 +1,33 @@
 {% include "_top.html" %}
 
 <main class="w-full h-100vh d-flex p-items-center">
-
     <form id="frm_restaurant_signup" class="w-25% d-flex flex-col gap-4 mx-auto">
-
         <div class="d-flex flex-col">
             <label for="restaurant_name">
                 <span>Restaurant name</span>
             </label>
-            <input name="restaurant_name" type="text" mix-check="{{ x.NAME_REGEX }}">
+            <input name="restaurant_name" type="text" mix-check="{{ x.NAME_REGEX }}" />
         </div>
-
-
 
         <div class="d-flex flex-col">
             <label for="restaurant_email">
-                <span>email</span>
+                <span>Email</span>
             </label>
-            <input name="restaurant_email" type="text" mix-check="{{ x.EMAIL_REGEX }}">
+            <input name="restaurant_email" type="text" mix-check="{{ x.EMAIL_REGEX }}" />
         </div>
-
 
         <div class="d-flex flex-col">
             <label for="restaurant_password" class="d-flex">
-                <span>password</span>
-                <span class="ml-auto text-c-gray:+25">{{ x.PASSWORD_MIN }} to {{ x.PASSWORD_MAX }}
-                    chars</span>
+                <span>Password</span>
+                <span class="ml-auto text-c-gray:+25">{{ x.PASSWORD_MIN }} to {{ x.PASSWORD_MAX }} chars</span>
             </label>
-            <input name="restaurant_password" type="text" mix-check="{{ x.PASSWORD_REGEX }}">
+            <input name="restaurant_password" type="text" mix-check="{{ x.PASSWORD_REGEX }}" />
         </div>
 
-        <button mix-post="/restaurants" mix-data="#frm_restaurant_signup">
-            Signup
-        </button>
+        <button mix-post="/restaurants" mix-data="#frm_restaurant_signup">Signup</button>
 
         <a href="{{url_for('view_login')}}" class="text-a-center">Login</a>
-
     </form>
-
 </main>
 
 {% include "_bottom.html" %}
