--- a/templates/view_admin_users.html
+++ b/templates/view_admin_users.html
@@ -13,10 +13,18 @@
             <td>{{ user.user_name }}</td>
             <td>{{ user.user_email }}</td>
             <td>
-                {% if user.user_blocked_at == 0 %}
-                  {% include "___btn_block_user.html" %}
+                {% if not user.user_blocked_at %}
+                <form id="block-user-{{ user.user_pk }}">
+                    <button mix-put="/users/block/{{ user.user_pk }}" mix-data="#block-user-{{ user.user_pk }}">
+                        Block
+                    </button>
+                </form>
                 {% else %}
-                  {% include "___btn_unblock_user.html" %}
+                <form id="unblock-user-{{ user.user_pk }}">
+                    <button mix-put="/users/unblock/{{ user.user_pk }}" mix-data="#unblock-user-{{ user.user_pk }}">
+                        Unblock
+                    </button>
+                </form>
                 {% endif %}
             </td>
         </tr>
