--- a/templates/view_customer.html
+++ b/templates/view_customer.html
@@ -4,6 +4,7 @@
     <div id="map" class="w-full h-100vh"></div>
 
     <div class="w-full h-100vh">
+        <button><a href="{{ url_for('view_customer_items')}}">Items</a></button>
         <!-- <button class="px-20 py-4 rounded-sm"
             mix-get="/items/page/1"
         >
@@ -11,9 +12,7 @@
         </button> -->
         <h1>Customer</h1>
         {{ user }}
-
     </div>
 </main>
-
 
 {% include "_bottom_map.html" %}
