create_item_image

--- a/templates/view_customer_items.html
+++ b/templates/view_customer_items.html
@@ -9,7 +9,7 @@
             <td>{{ item.item_title}}</td>
             <td>{{ item.item_description}}</td>
             <td>{{ item.item_price}}</td>
-            <td><img src="{{ item.item_image_url}}" alt="image" /></td>
+            <td><img src="{{ item.item_image_name}}" alt="image" /></td>
         </tr>
     </table>
     {% endfor %}
