--- a/templates/view_restaurant_create_item.html
+++ b/templates/view_restaurant_create_item.html
@@ -3,7 +3,7 @@
 <main class="w-full">
     <h1>Create item</h1>
 
-    <form id="frm_create_item" class="w-25% d-flex flex-col gap-4 mx-auto p-self-center">
+    <form nctype="multipart/form-data" id="frm_create_item" class="w-25% d-flex flex-col gap-4 mx-auto p-self-center">
         <div class="d-flex flex-col">
             <label for="item_title">
                 <span>Title</span>
@@ -32,10 +32,10 @@
         </div>
 
         <div class="d-flex flex-col">
-            <label for="item_image_url">
+            <label for="item_image_name">
                 <span>Image</span>
             </label>
-            <input type="file" name="item_image_url" id="item_image_url" accept=".png, .jpg, .jpeg, .gif" />
+            <input type="file" name="item_image_name" id="item_image_name" accept=".png, .jpg, .jpeg, .gif" multiple />
         </div>
 
         <button class="cursor-pointer" mix-post="/items" mix-data="#frm_create_item">Create item</button>
