--- a/templates/view_restaurant.html
+++ b/templates/view_restaurant.html
@@ -1,7 +1,7 @@
 {% include "_top_logged.html" %}
 
 <main class="w-full">
-    <button><a href="{{ url_for('view_restaurant_create_item')}}">Create item</a></button>
+    <!-- <button><a href="{{ url_for('view_restaurant_create_item')}}">Create item</a></button> -->
     <div class="w-full h-100vh">
         <h1>Restaurant</h1>
         {{ user }}
