--- a/templates/_top_logged.html
+++ b/templates/_top_logged.html
@@ -12,8 +12,22 @@
 
     <body class="w-full h-100vh text-c-gray:-16">
         <div id="toast" class="d-flex flex-col j-content-center p-fixed w-full top-4 z-10"></div>
-        <form method="POST" action="{{url_for('logout')}}">
-            <button>Logout</button>
-        </form>
+        <div class="d-flex">
+            <form method="POST" action="{{url_for('logout')}}">
+                <button>Logout</button>
+            </form>
+
+            {% if user and user.roles|length > 1 %}
+                <button><a href="{{ url_for('view_choose_role')}}">Change role</a></button>
+            {% endif %} 
+
+            {% if 'restaurant' in user.roles %}
+                <button><a href="{{ url_for('view_restaurant_create_item')}}">Create item</a></button>
+            {% elif 'customer' in user.roles %}
+                <button><a href="{{ url_for('view_customer_items')}}">Items</a></button>
+            {% endif %}
+
+
+        </div>
     </body>
 </html>
