--- a/templates/view_restaurant_create_item.html
+++ b/templates/view_restaurant_create_item.html
@@ -43,4 +43,6 @@
     </form>
 </main>
 
+<script src="{{ url_for('static', filename='file_list.js') }}" type="module"></script>
+
 {% include "_bottom.html" %}
