--- a/templates/_top_logged.html
+++ b/templates/_top_logged.html
@@ -6,7 +6,6 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='mixhtml.css') }}" />
         <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
         <script src="https://unpkg.com/mojocss"></script>
-        <script src="{{ url_for('static', filename='file_list.js') }}" type="module"></script>
         <title>{{ title or "Company" }}</title>
     </head>
 
@@ -24,6 +23,8 @@
             <button><a href="{{ url_for('view_edit_restaurant_profile')}}">Edit profile</a></button>
             {% elif 'customer' in user.roles %}
             <button><a href="{{ url_for('view_customer_items')}}">Items</a></button>
+            <button><a href="{{ url_for('view_edit_profile')}}">Edit profile</a></button>
+            {% elif 'partner' in user.roles%}
             <button><a href="{{ url_for('view_edit_profile')}}">Edit profile</a></button>
             {% endif %}
         </div>
