--- a/templates/view_admin_users.html
+++ b/templates/view_admin_users.html
@@ -35,6 +35,18 @@
                 </form>
                 {% endif %}
             </td>
+            <td>
+                {% if account.account_deleted_at == 0 %}
+                <button
+                    class="bg-none text-c-body px-3 py-1 rounded-sm h-10 w-10 cursor-pointer"
+                    title="Delete User"
+                    mix-get="/users/delete/{{account['account_pk']}}">
+                    🗑️
+                </button>
+                {% else %}
+                <div class="text-c-white d-flex a-items-center">deleted at: {{ account.account_deleted_at }}</div>
+                {% endif %}
+            </td>
         </tr>
         {% endif %} {% endfor %}
     </table>
@@ -70,6 +82,18 @@
                         Unblock
                     </button>
                 </form>
+                {% endif %}
+            </td>
+            <td>
+                {% if account.account_deleted_at == 0 %}
+                <button
+                    class="bg-none text-c-body px-3 py-1 rounded-sm h-10 w-10 cursor-pointer"
+                    title="Delete User"
+                    mix-get="/users/delete/{{account['account_pk']}}">
+                    🗑️
+                </button>
+                {% else %}
+                <p class="d-flex a-items-center">Deleted attt: {{ account.account_deleted_at }}</p>
                 {% endif %}
             </td>
         </tr>
