--- a/templates/view_admin_users.html
+++ b/templates/view_admin_users.html
@@ -43,7 +43,7 @@
                 <button
                     class="bg-none text-c-body px-3 py-1 rounded-sm h-10 w-10 cursor-pointer"
                     title="Delete User"
-                    mix-delete="/users/delete/{{account['account_pk']}}"
+                    mix-delete="/admin/users/delete/{{account['account_pk']}}"
                     mix-target="#delete-user-btn-{{ account.account_pk }}">
                     🗑️
                 </button>
@@ -96,7 +96,7 @@
                 <button
                     class="bg-none text-c-body px-3 py-1 rounded-sm h-10 w-10 cursor-pointer"
                     title="Delete User"
-                    mix-delete="/users/delete/{{account['account_pk']}}"
+                    mix-delete="/admin/users/delete/{{account['account_pk']}}"
                     mix-target="#delete-user-btn-{{ account.account_pk }}">
                     🗑️
                 </button>
