--- a/templates/_top_logged.html
+++ b/templates/_top_logged.html
@@ -23,6 +23,7 @@
             <button><a href="{{ url_for('view_edit_restaurant_profile')}}">Edit profile</a></button>
             {% elif 'customer' in user.roles %}
             <button><a href="{{ url_for('view_customer_items')}}">Items</a></button>
+            <button><a href="{{ url_for('view_customer_restaurants')}}">Restaurants</a></button>
             <button><a href="{{ url_for('view_edit_profile')}}">Edit profile</a></button>
             {% elif 'partner' in user.roles%}
             <button><a href="{{ url_for('view_edit_profile')}}">Edit profile</a></button>
