--- a/templates/view_restaurant_items.html
+++ b/templates/view_restaurant_items.html
@@ -1,12 +1,20 @@
 {% include "_top_logged.html" %}
 
 <main class="w-full">
-    <h1>All Items</h1>
+    <h1>{{ restaurant.restaurant_name }}</h1>
+    <div class="w-100 h-50 overflow:hidden d-flex j-content-center rounded-md a-items-center">
+        <img
+            src="{{ url_for('static', filename='restaurant_images/' + restaurant.restaurant_image_name) }}"
+            alt="{{ restaurant.restaurant_name }}"
+            class="w-full h-full obj-f-cover" />
+    </div>
 
     <div class="d-flex flex-col j-items-center">
-        <div class="d-flex flex-wrap j-content-center a-items-center gap-3">
+        <div class="d-flex flex-wrap j-content-center a-items-center gap-5">
             {% for item in items %}
-            <article class="d-flex pa-3 shadow-sm rounded-5 h-30 w-110 j-content-between">
+            <article
+                class="d-flex pa-3 shadow-sm rounded-5 h-30 w-110 j-content-between cursor-pointer"
+                hover="scale-105">
                 <div class="w-66% d-flex flex-col j-content-between">
                     <div>
                         <p class="text-w-semibold ma-0">{{ item.item_title}}</p>
