--- a/templates/___search_results.html
+++ b/templates/___search_results.html
@@ -1,19 +1,56 @@
-{% if items %}
-<p>Search results for "{{ search_text }}"</p>
-<ul>
-    {% for item in items %}
-    <article class="d-flex pa-3 shadow-sm rounded-5 h-30 w-110 j-content-between">
-        <div class="w-66% d-flex flex-col j-content-between">
-            <div>
-                <p class="text-w-semibold ma-0">{{ item.item_title}}</p>
-                <p class="text-80 text-c-gray:+16 text-w-light ma-0">{{ item.item_description}}</p>
-            </div>
-            <p class="text-c-blue:+13 text-w-light text-90 ma-0">DKK {{ item.item_price}}</p>
-        </div>
-    </article>
+{% include "_top_logged.html" %}
 
-    {% endfor %}
-</ul>
-{% else %}
-<p>No results found for "{{ search_text }}"</p>
+{% if results %}
+    <p class="text-left py-5 text-4xl font-extrabold">Search results: <span class="capitalize">{{ search_text }}</span></p>
+    {% if restaurants %}
+    <p class="text-left py-5 text-2xl font-extrabold">Restaurants</p>
+        <div class="flex flex-wrap justify-start items-center gap-5 mb-5">
+            {% for restaurant in restaurants %}
+            <a href="/customer/restaurant/{{ restaurant.restaurant_pk }}" class="block h-30 w-1/3 min-w-60 ">
+                <article class="flex p-3 shadow-md rounded-lg h-full w-full justify-between">
+                    <div class="w-2/3 flex flex-col justify-between">
+                        <p class="font-semibold m-0">{{ restaurant.restaurant_name }}</p>
+                    </div>
+                    <div class="w-1/3 h-20 overflow-hidden flex justify-center items-center rounded-lg">
+                        <img
+                            src="{{ url_for('static', filename='restaurant_images/' + restaurant.restaurant_image_name) }}"
+                            alt="{{ restaurant.restaurant_name }}"
+                            class="w-full h-full object-cover" />
+                    </div>
+                </article>
+            </a>
+            {% endfor %}
+        </div>
+    {% endif %}
+
+    {% if items %}
+    <p class="text-left py-5 text-2xl font-extrabold">Items</p>
+        <div class="flex flex-wrap justify-start items-center gap-5">
+            {% for item in items %}
+            <article class="flex p-3 shadow-md rounded-lg h-30 w-1/3 justify-between">
+                <div class="w-2/3 flex flex-col justify-between">
+                    <div>
+                        <p class="font-semibold m-0">{{ item.item_title }}</p>
+                        <p class="text-gray-600 text-sm font-light m-0">{{ item.item_description }}</p>
+                    </div>
+                    <p class="text-blue-500 text-sm font-light m-0">DKK {{ item.item_price }}</p>
+                </div>
+                <div class="w-1/3 h-20 overflow-hidden flex justify-center items-center rounded-lg">
+                    <img
+                        src="{{ url_for('static', filename='item_images/' + item.item_image_name) }}"
+                        alt="{{ item.item_title }}"
+                        class="h-full w-full object-cover" />
+                </div>
+            </article>
+            {% endfor %}
+        </div>
+    {% endif %}
+
+
+
+    {% if not items and not restaurants %}
+        <p>No results found for "{{ search_text }}"</p>
+    {% endif %}
 {% endif %}
+
+{% include "_bottom.html" %}
