--- a/templates/_bottom_map.html
+++ b/templates/_bottom_map.html
@@ -1,3 +1,4 @@
+</div>
 <script src="{{url_for('static', filename='app.js')}}"></script>
 <script src="{{url_for('static', filename='mixhtml.js')}}"></script>
 
