--- a/templates/_bottom.html
+++ b/templates/_bottom.html
@@ -1,6 +1,6 @@
+</div>
 <script src="{{url_for('static', filename='app.js')}}"></script>
 <script src="{{url_for('static', filename='mixhtml.js')}}"></script>
-
 </body>
 
 </html>
