--- a/templates/_top_logged.html
+++ b/templates/_top_logged.html
@@ -14,8 +14,6 @@
         <div id="toast" class="flex flex-col justify-center fixed w-full top-4 z-10"></div>
         <header class="">
             <!-- Dropdown container -->
-
-            
             {% if 'restaurant' in user.roles %}
                 {% include "__header_customer.html"%}
             {% elif 'customer' in user.roles %}
@@ -23,6 +21,8 @@
             {% elif 'partner' in user.roles %}
                 {% include "__header_partner.html"%}
             {% endif %}
+        
         </header>
+        <div class="px-20">
         
         
